reorganize analysis data

--- a/data/analysis/01_dq_checks.ipynb
+++ b/data/analysis/01_dq_checks.ipynb
@@ -209,7 +209,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(\"titanic.csv\")\n",
+    "df = pd.read_csv(\"input/titanic.csv\")\n",
     "print(f\"{df.shape}\")\n",
     "df.head(1)"
    ]
