--- a/data/analysis/03_sum_stats.ipynb
+++ b/data/analysis/03_sum_stats.ipynb
@@ -42,7 +42,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(\"titanic.csv\")\n",
+    "df = pd.read_csv(\"input/titanic.csv\")\n",
     "print(f\"{df.shape}\")\n",
     "print(df.iloc[0, :].to_string())"
    ]
