--- a/data/analysis/05_flags.ipynb
+++ b/data/analysis/05_flags.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(\"titanic.csv\")\n",
+    "df = pd.read_csv(\"input/titanic.csv\")\n",
     "print(f\"{df.shape}\")\n",
     "print(df.iloc[0, :].to_string())"
    ]
