--- a/data/analysis/23_histogram.ipynb
+++ b/data/analysis/23_histogram.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
     }
    ],
    "source": [
-    "tt = pd.read_csv(\"titanic.csv\")\n",
+    "tt = pd.read_csv(\"input/titanic.csv\")\n",
     "print(f\"{tt.shape}\")\n",
     "print(tt.head().to_string())"
    ]
