--- a/data/analysis/25_sfa.ipynb
+++ b/data/analysis/25_sfa.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +49,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(\"titanic.csv\")\n",
+    "df = pd.read_csv(\"input/titanic.csv\")\n",
     "print(f\"{df.shape}\")\n",
     "print(df.iloc[0, :].to_string())"
    ]
