--- a/data/analysis/90_excel_writer.ipynb
+++ b/data/analysis/90_excel_writer.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(\"titanic.csv\")\n",
+    "df = pd.read_csv(\"input/titanic.csv\")\n",
     "df.shape"
    ]
   },
