ew add read excel df

--- a/data/analysis/90_excel_writer.ipynb
+++ b/data/analysis/90_excel_writer.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pylibs.excel_writer import ExcelWriter, read_excel_img"
+    "from pylibs.excel_writer import ExcelWriter, read_excel_img, read_excel_df"
    ]
   },
   {
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +49,7 @@
        "(891, 15)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
          "type": "float"
         }
        ],
-       "ref": "81e3742f-ec2f-4314-83ab-b4848436dfaf",
+       "ref": "d8d377e1-62ce-4337-97ef-bc1bc6ec14f4",
        "rows": [
         [
          "0",
@@ -169,7 +169,7 @@
        "2  woman  271           0.76"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,78 +190,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<style type=\"text/css\">\n",
-       "#T_10bb6_row0_col0, #T_10bb6_row0_col1, #T_10bb6_row0_col2, #T_10bb6_row1_col0, #T_10bb6_row2_col0, #T_10bb6_row2_col1, #T_10bb6_row2_col2 {\n",
+       "#T_b58bd_row0_col0, #T_b58bd_row0_col1, #T_b58bd_row0_col2, #T_b58bd_row1_col0, #T_b58bd_row2_col0, #T_b58bd_row2_col1, #T_b58bd_row2_col2 {\n",
        "  background-color: lightyellow;\n",
        "  color: darkblue;\n",
        "  border-style: hair;\n",
        "  border-color: black;\n",
        "}\n",
-       "#T_10bb6_row1_col1 {\n",
+       "#T_b58bd_row1_col1 {\n",
        "  background-color: lightyellow;\n",
        "  color: darkblue;\n",
        "  border-style: hair;\n",
        "  border-color: black;\n",
        "  background-color: yellow;\n",
        "}\n",
-       "#T_10bb6_row1_col2 {\n",
+       "#T_b58bd_row1_col2 {\n",
        "  background-color: lightyellow;\n",
        "  color: darkblue;\n",
        "  border-style: hair;\n",
        "  border-color: black;\n",
        "  color: red;\n",
        "}\n",
-       "#T_10bb6_level0_row0, #T_10bb6_level0_row1, #T_10bb6_level0_row2 {\n",
+       "#T_b58bd_level0_row0, #T_b58bd_level0_row1, #T_b58bd_level0_row2 {\n",
        "  background-color: lightblue;\n",
        "  color: black;\n",
        "}\n",
-       "#T_10bb6_level0_col0, #T_10bb6_level0_col1, #T_10bb6_level0_col2 {\n",
+       "#T_b58bd_level0_col0, #T_b58bd_level0_col1, #T_b58bd_level0_col2 {\n",
        "  background-color: green;\n",
        "  color: black;\n",
        "}\n",
        "</style>\n",
-       "<table id=\"T_10bb6\">\n",
+       "<table id=\"T_b58bd\">\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"blank level0\" >&nbsp;</th>\n",
-       "      <th id=\"T_10bb6_level0_col0\" class=\"col_heading level0 col0\" >who</th>\n",
-       "      <th id=\"T_10bb6_level0_col1\" class=\"col_heading level0 col1\" >n</th>\n",
-       "      <th id=\"T_10bb6_level0_col2\" class=\"col_heading level0 col2\" >survival_rate</th>\n",
+       "      <th id=\"T_b58bd_level0_col0\" class=\"col_heading level0 col0\" >who</th>\n",
+       "      <th id=\"T_b58bd_level0_col1\" class=\"col_heading level0 col1\" >n</th>\n",
+       "      <th id=\"T_b58bd_level0_col2\" class=\"col_heading level0 col2\" >survival_rate</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_10bb6_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
-       "      <td id=\"T_10bb6_row0_col0\" class=\"data row0 col0\" >child</td>\n",
-       "      <td id=\"T_10bb6_row0_col1\" class=\"data row0 col1\" >83</td>\n",
-       "      <td id=\"T_10bb6_row0_col2\" class=\"data row0 col2\" >0.590000</td>\n",
+       "      <th id=\"T_b58bd_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
+       "      <td id=\"T_b58bd_row0_col0\" class=\"data row0 col0\" >child</td>\n",
+       "      <td id=\"T_b58bd_row0_col1\" class=\"data row0 col1\" >83</td>\n",
+       "      <td id=\"T_b58bd_row0_col2\" class=\"data row0 col2\" >0.590000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_10bb6_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
-       "      <td id=\"T_10bb6_row1_col0\" class=\"data row1 col0\" >man</td>\n",
-       "      <td id=\"T_10bb6_row1_col1\" class=\"data row1 col1\" >537</td>\n",
-       "      <td id=\"T_10bb6_row1_col2\" class=\"data row1 col2\" >0.160000</td>\n",
+       "      <th id=\"T_b58bd_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
+       "      <td id=\"T_b58bd_row1_col0\" class=\"data row1 col0\" >man</td>\n",
+       "      <td id=\"T_b58bd_row1_col1\" class=\"data row1 col1\" >537</td>\n",
+       "      <td id=\"T_b58bd_row1_col2\" class=\"data row1 col2\" >0.160000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_10bb6_level0_row2\" class=\"row_heading level0 row2\" >2</th>\n",
-       "      <td id=\"T_10bb6_row2_col0\" class=\"data row2 col0\" >woman</td>\n",
-       "      <td id=\"T_10bb6_row2_col1\" class=\"data row2 col1\" >271</td>\n",
-       "      <td id=\"T_10bb6_row2_col2\" class=\"data row2 col2\" >0.760000</td>\n",
+       "      <th id=\"T_b58bd_level0_row2\" class=\"row_heading level0 row2\" >2</th>\n",
+       "      <td id=\"T_b58bd_row2_col0\" class=\"data row2 col0\" >woman</td>\n",
+       "      <td id=\"T_b58bd_row2_col1\" class=\"data row2 col1\" >271</td>\n",
+       "      <td id=\"T_b58bd_row2_col2\" class=\"data row2 col2\" >0.760000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x21340058c20>"
+       "<pandas.io.formats.style.Styler at 0x1ce1307cad0>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -319,6 +319,126 @@
    "metadata": {},
    "source": [
     "### basic usage - read"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "who",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "n",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "survival_rate",
+         "rawType": "float64",
+         "type": "float"
+        }
+       ],
+       "ref": "1afa9174-7284-4933-b692-c636e067233b",
+       "rows": [
+        [
+         "0",
+         "child",
+         "83",
+         "0.59"
+        ],
+        [
+         "1",
+         "man",
+         "537",
+         "0.16"
+        ],
+        [
+         "2",
+         "woman",
+         "271",
+         "0.76"
+        ]
+       ],
+       "shape": {
+        "columns": 3,
+        "rows": 3
+       }
+      },
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>who</th>\n",
+       "      <th>n</th>\n",
+       "      <th>survival_rate</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>child</td>\n",
+       "      <td>83</td>\n",
+       "      <td>0.59</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>man</td>\n",
+       "      <td>537</td>\n",
+       "      <td>0.16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>woman</td>\n",
+       "      <td>271</td>\n",
+       "      <td>0.76</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     who    n  survival_rate\n",
+       "0  child   83           0.59\n",
+       "1    man  537           0.16\n",
+       "2  woman  271           0.76"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rdf = read_excel_df(file_path=Path(\"input\") / \"xl_input1.xlsx\", sheet_name='Part 3', range_ref=\"P2:S5\", index_col=0)\n",
+    "rdf"
    ]
   },
   {
