update subproc eg

--- a/generics/shell/subprocess_scripts/subproc_examples.ipynb
+++ b/generics/shell/subprocess_scripts/subproc_examples.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### plain example"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -11,18 +18,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "CompletedProcess(args='dir', returncode=0, stdout=b' Volume in drive C is Windows\\r\\n Volume Serial Number is 183C-408E\\r\\n\\r\\n Directory of c:\\\\Users\\\\yzdom\\\\Projects\\\\python_collection\\\\generics\\\\shell\\\\subprocess_scripts\\r\\n\\r\\n05/31/2025  11:51 PM    <DIR>          .\\r\\n05/31/2025  11:50 PM    <DIR>          ..\\r\\n04/05/2025  12:15 PM             1,423 cut_end.py\\r\\n04/05/2025  12:15 PM               714 query_user.py\\r\\n04/05/2025  12:15 PM               510 run_r.py\\r\\n06/01/2025  12:01 AM             1,430 subproc_examples.ipynb\\r\\n04/05/2025  12:15 PM               715 terminal.py\\r\\n               5 File(s)          4,792 bytes\\r\\n               2 Dir(s)  368,840,531,968 bytes free\\r\\n', stderr=b'')"
+       "CompletedProcess(args='dir', returncode=0, stdout=b' Volume in drive C is Windows\\r\\n Volume Serial Number is 183C-408E\\r\\n\\r\\n Directory of c:\\\\Users\\\\yzdom\\\\Projects\\\\python_collection\\\\generics\\\\shell\\\\subprocess_scripts\\r\\n\\r\\n09/16/2025  10:12 PM    <DIR>          .\\r\\n08/25/2025  11:35 PM    <DIR>          ..\\r\\n08/09/2025  10:23 AM             1,421 cut_end.py\\r\\n06/01/2025  12:51 AM               244 measure_temp.py\\r\\n04/05/2025  12:15 PM               714 query_user.py\\r\\n04/05/2025  12:15 PM               510 run_r.py\\r\\n09/16/2025  10:16 PM             7,384 subproc_examples.ipynb\\r\\n09/16/2025  10:15 PM               593 terminal.py\\r\\n09/16/2025  10:15 PM    <DIR>          __pycache__\\r\\n               6 File(s)         10,866 bytes\\r\\n               3 Dir(s)  232,758,083,584 bytes free\\r\\n', stderr=b'')"
       ]
      },
-     "execution_count": 11,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "subprocess.run(\"dir\", shell=True, capture_output=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "CompletedProcess(args='dir', returncode=0, stdout=b' Volume in drive C is Windows\\r\\n Volume Serial Number is 183C-408E\\r\\n\\r\\n Directory of c:\\\\Users\\\\yzdom\\\\Projects\\\\python_collection\\\\generics\\\\shell\\\\subprocess_scripts\\r\\n\\r\\n09/16/2025  10:12 PM    <DIR>          .\\r\\n08/25/2025  11:35 PM    <DIR>          ..\\r\\n08/09/2025  10:23 AM             1,421 cut_end.py\\r\\n06/01/2025  12:51 AM               244 measure_temp.py\\r\\n04/05/2025  12:15 PM               714 query_user.py\\r\\n04/05/2025  12:15 PM               510 run_r.py\\r\\n09/16/2025  10:13 PM             5,953 subproc_examples.ipynb\\r\\n09/16/2025  10:15 PM               593 terminal.py\\r\\n09/16/2025  10:12 PM    <DIR>          __pycache__\\r\\n               6 File(s)          9,435 bytes\\r\\n               3 Dir(s)  232,757,972,992 bytes free\\r\\n', stderr=b'')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -33,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +67,7 @@
        "''"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -53,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -65,21 +90,106 @@
       "\n",
       " Directory of c:\\Users\\yzdom\\Projects\\python_collection\\generics\\shell\\subprocess_scripts\n",
       "\n",
-      "05/31/2025  11:51 PM    <DIR>          .\n",
-      "05/31/2025  11:50 PM    <DIR>          ..\n",
-      "04/05/2025  12:15 PM             1,423 cut_end.py\n",
+      "09/16/2025  10:12 PM    <DIR>          .\n",
+      "08/25/2025  11:35 PM    <DIR>          ..\n",
+      "08/09/2025  10:23 AM             1,421 cut_end.py\n",
+      "06/01/2025  12:51 AM               244 measure_temp.py\n",
       "04/05/2025  12:15 PM               714 query_user.py\n",
       "04/05/2025  12:15 PM               510 run_r.py\n",
-      "06/01/2025  12:01 AM             1,430 subproc_examples.ipynb\n",
-      "04/05/2025  12:15 PM               715 terminal.py\n",
-      "               5 File(s)          4,792 bytes\n",
-      "               2 Dir(s)  368,840,531,968 bytes free\n",
+      "09/16/2025  10:13 PM             5,953 subproc_examples.ipynb\n",
+      "09/16/2025  10:15 PM               593 terminal.py\n",
+      "09/16/2025  10:12 PM    <DIR>          __pycache__\n",
+      "               6 File(s)          9,435 bytes\n",
+      "               3 Dir(s)  232,757,972,992 bytes free\n",
       "\n"
      ]
     }
    ],
    "source": [
     "print(completed_proc.stdout.decode(\"utf-8\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### tools"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from terminal import run_shell_cmd, run_shell_cmd_on_path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Volume in drive C is Windows\n",
+      " Volume Serial Number is 183C-408E\n",
+      "\n",
+      " Directory of c:\\Users\\yzdom\\Projects\\python_collection\\generics\\shell\\subprocess_scripts\n",
+      "\n",
+      "09/16/2025  10:12 PM    <DIR>          .\n",
+      "08/25/2025  11:35 PM    <DIR>          ..\n",
+      "08/09/2025  10:23 AM             1,421 cut_end.py\n",
+      "06/01/2025  12:51 AM               244 measure_temp.py\n",
+      "04/05/2025  12:15 PM               714 query_user.py\n",
+      "04/05/2025  12:15 PM               510 run_r.py\n",
+      "09/16/2025  10:13 PM             5,953 subproc_examples.ipynb\n",
+      "09/16/2025  10:15 PM               593 terminal.py\n",
+      "09/16/2025  10:15 PM    <DIR>          __pycache__\n",
+      "               6 File(s)          9,435 bytes\n",
+      "               3 Dir(s)  232,757,972,992 bytes free\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(run_shell_cmd(\"dir\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Volume in drive C is Windows\n",
+      " Volume Serial Number is 183C-408E\n",
+      "\n",
+      " Directory of c:\\Users\\yzdom\\Projects\\python_collection\\generics\\shell\n",
+      "\n",
+      "08/25/2025  11:35 PM    <DIR>          .\n",
+      "08/16/2025  11:44 PM    <DIR>          ..\n",
+      "08/25/2025  11:35 PM             3,696 asyncio_subprocess.ipynb\n",
+      "04/05/2025  12:15 PM    <DIR>          contextlib_scripts\n",
+      "04/05/2025  12:15 PM    <DIR>          git_related\n",
+      "04/05/2025  12:15 PM    <DIR>          pathlib_scripts\n",
+      "04/05/2025  12:15 PM    <DIR>          shutil\n",
+      "09/16/2025  10:12 PM    <DIR>          subprocess_scripts\n",
+      "04/05/2025  12:15 PM    <DIR>          test_acrc\n",
+      "               1 File(s)          3,696 bytes\n",
+      "               8 Dir(s)  232,757,972,992 bytes free\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pathlib import Path\n",
+    "print(run_shell_cmd_on_path(\"dir\", Path(\"..\")))"
    ]
   },
   {
