--- a/data/analysis/90_excel_writer.ipynb
+++ b/data/analysis/90_excel_writer.ipynb
@@ -13,11 +13,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pylibs.excel_writer import ExcelWriter, read_excel_img, read_excel_df"
+    "from pylibs.excel_writer import ExcelWriter, read_excel_img, read_excel_df, read_excel_text"
    ]
   },
   {
@@ -89,7 +89,7 @@
          "type": "float"
         }
        ],
-       "ref": "d8d377e1-62ce-4337-97ef-bc1bc6ec14f4",
+       "ref": "2b498fb2-c4e8-495c-9dc4-51aca57c4d50",
        "rows": [
         [
          "0",
@@ -197,68 +197,68 @@
      "data": {
       "text/html": [
        "<style type=\"text/css\">\n",
-       "#T_b58bd_row0_col0, #T_b58bd_row0_col1, #T_b58bd_row0_col2, #T_b58bd_row1_col0, #T_b58bd_row2_col0, #T_b58bd_row2_col1, #T_b58bd_row2_col2 {\n",
+       "#T_ba18c_row0_col0, #T_ba18c_row0_col1, #T_ba18c_row0_col2, #T_ba18c_row1_col0, #T_ba18c_row2_col0, #T_ba18c_row2_col1, #T_ba18c_row2_col2 {\n",
        "  background-color: lightyellow;\n",
        "  color: darkblue;\n",
        "  border-style: hair;\n",
        "  border-color: black;\n",
        "}\n",
-       "#T_b58bd_row1_col1 {\n",
+       "#T_ba18c_row1_col1 {\n",
        "  background-color: lightyellow;\n",
        "  color: darkblue;\n",
        "  border-style: hair;\n",
        "  border-color: black;\n",
        "  background-color: yellow;\n",
        "}\n",
-       "#T_b58bd_row1_col2 {\n",
+       "#T_ba18c_row1_col2 {\n",
        "  background-color: lightyellow;\n",
        "  color: darkblue;\n",
        "  border-style: hair;\n",
        "  border-color: black;\n",
        "  color: red;\n",
        "}\n",
-       "#T_b58bd_level0_row0, #T_b58bd_level0_row1, #T_b58bd_level0_row2 {\n",
+       "#T_ba18c_level0_row0, #T_ba18c_level0_row1, #T_ba18c_level0_row2 {\n",
        "  background-color: lightblue;\n",
        "  color: black;\n",
        "}\n",
-       "#T_b58bd_level0_col0, #T_b58bd_level0_col1, #T_b58bd_level0_col2 {\n",
+       "#T_ba18c_level0_col0, #T_ba18c_level0_col1, #T_ba18c_level0_col2 {\n",
        "  background-color: green;\n",
        "  color: black;\n",
        "}\n",
        "</style>\n",
-       "<table id=\"T_b58bd\">\n",
+       "<table id=\"T_ba18c\">\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"blank level0\" >&nbsp;</th>\n",
-       "      <th id=\"T_b58bd_level0_col0\" class=\"col_heading level0 col0\" >who</th>\n",
-       "      <th id=\"T_b58bd_level0_col1\" class=\"col_heading level0 col1\" >n</th>\n",
-       "      <th id=\"T_b58bd_level0_col2\" class=\"col_heading level0 col2\" >survival_rate</th>\n",
+       "      <th id=\"T_ba18c_level0_col0\" class=\"col_heading level0 col0\" >who</th>\n",
+       "      <th id=\"T_ba18c_level0_col1\" class=\"col_heading level0 col1\" >n</th>\n",
+       "      <th id=\"T_ba18c_level0_col2\" class=\"col_heading level0 col2\" >survival_rate</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_b58bd_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
-       "      <td id=\"T_b58bd_row0_col0\" class=\"data row0 col0\" >child</td>\n",
-       "      <td id=\"T_b58bd_row0_col1\" class=\"data row0 col1\" >83</td>\n",
-       "      <td id=\"T_b58bd_row0_col2\" class=\"data row0 col2\" >0.590000</td>\n",
+       "      <th id=\"T_ba18c_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
+       "      <td id=\"T_ba18c_row0_col0\" class=\"data row0 col0\" >child</td>\n",
+       "      <td id=\"T_ba18c_row0_col1\" class=\"data row0 col1\" >83</td>\n",
+       "      <td id=\"T_ba18c_row0_col2\" class=\"data row0 col2\" >0.590000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_b58bd_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
-       "      <td id=\"T_b58bd_row1_col0\" class=\"data row1 col0\" >man</td>\n",
-       "      <td id=\"T_b58bd_row1_col1\" class=\"data row1 col1\" >537</td>\n",
-       "      <td id=\"T_b58bd_row1_col2\" class=\"data row1 col2\" >0.160000</td>\n",
+       "      <th id=\"T_ba18c_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
+       "      <td id=\"T_ba18c_row1_col0\" class=\"data row1 col0\" >man</td>\n",
+       "      <td id=\"T_ba18c_row1_col1\" class=\"data row1 col1\" >537</td>\n",
+       "      <td id=\"T_ba18c_row1_col2\" class=\"data row1 col2\" >0.160000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_b58bd_level0_row2\" class=\"row_heading level0 row2\" >2</th>\n",
-       "      <td id=\"T_b58bd_row2_col0\" class=\"data row2 col0\" >woman</td>\n",
-       "      <td id=\"T_b58bd_row2_col1\" class=\"data row2 col1\" >271</td>\n",
-       "      <td id=\"T_b58bd_row2_col2\" class=\"data row2 col2\" >0.760000</td>\n",
+       "      <th id=\"T_ba18c_level0_row2\" class=\"row_heading level0 row2\" >2</th>\n",
+       "      <td id=\"T_ba18c_row2_col0\" class=\"data row2 col0\" >woman</td>\n",
+       "      <td id=\"T_ba18c_row2_col1\" class=\"data row2 col1\" >271</td>\n",
+       "      <td id=\"T_ba18c_row2_col2\" class=\"data row2 col2\" >0.760000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x1ce1307cad0>"
+       "<pandas.io.formats.style.Styler at 0x1d7d8810ad0>"
       ]
      },
      "execution_count": 6,
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +351,7 @@
          "type": "float"
         }
        ],
-       "ref": "1afa9174-7284-4933-b692-c636e067233b",
+       "ref": "55f221a4-fafc-42b8-b02e-f8cb9e06c1b8",
        "rows": [
         [
          "0",
@@ -431,7 +431,7 @@
        "2  woman  271           0.76"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -453,13 +453,35 @@
        "<PIL.PngImagePlugin.PngImageFile image mode=RGBA size=640x480>"
       ]
      },
+     "execution_count": 9,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "img = read_excel_img(file_path=Path(\"input\") / \"xl_input1.xlsx\", sheet_name='Part 3', anchor_cell='B8')\n",
     "img"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "line1\n",
+      "line2\n",
+      "line3\n",
+      "line5\n"
+     ]
+    }
+   ],
+   "source": [
+    "text = read_excel_text(file_path=Path(\"input\") / \"xl_input1.xlsx\", sheet_name='Part 3', range_ref=\"B38:B42\")\n",
+    "print(text)"
    ]
   },
   {
@@ -471,16 +493,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "ExcelWriter(file_path='output\\test.xlsx',mode = w,sheet_name=Sheet),cur_row=34,cur_col=1,distance_bw_contents=2,)"
+       "ExcelWriter(file_path='output\\test.xlsx', mode = w, sheet_name=Sheet), cur_row=69, cur_col=1, distance_bw_contents=2,)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -497,7 +519,8 @@
     "    title=\"Figure 1: Bar Plot\",\n",
     ")\n",
     "\n",
-    "import openpyxl.drawing.image as openpyxl_image\n",
+    "# images\n",
+    "from openpyxl.drawing import image as openpyxl_image\n",
     "import io\n",
     "with open(\"input/age_dist.png\", \"rb\") as f:\n",
     "    img = openpyxl_image.Image(io.BytesIO(f.read()))\n",
@@ -506,7 +529,6 @@
     "        title=\"Figure 2: Bar Plot\",\n",
     "        location='right'\n",
     "    )\n",
-    "\n",
     "import PIL.Image as PILImage\n",
     "img = PILImage.open(\"input/age_dist.png\")\n",
     "ew.write_fig(\n",
@@ -514,21 +536,29 @@
     "    title=\"Figure 3: Bar Plot\",\n",
     ")\n",
     "\n",
-    "ew.auto_fit_column_width()"
+    "ew.auto_fit_column_width()\n",
+    "\n",
+    "ew.write_text(f\"\"\"\n",
+    "line 1\n",
+    "line 2\n",
+    "line 3\n",
+    "\"\"\", 'text')\n",
+    "ew.write_text(\"single line\", location='right')\n",
+    "ew.write_text(\"single line 2 down\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "ExcelWriter(file_path='output\\test.xlsx',mode = w,sheet_name=Part 2),cur_row=1,cur_col=1,distance_bw_contents=2,)"
+       "ExcelWriter(file_path='output\\test.xlsx', mode = w, sheet_name=Part 2), cur_row=38, cur_col=1, distance_bw_contents=2,)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -540,7 +570,10 @@
     "    ew\n",
     "    .switch_to_sheet(\"Part 2\", create_if_not_exists=True)\n",
     "    .write_df(tbl, title=\"Table 3: DataFrame\")\n",
+    "    .write(img, title=\"Figure 4: Bar Plot\", scaler=0.9)\n",
+    "    .write(tbl_styled, title=\"Table 4: Styled DataFrame\")\n",
     "    .auto_fit_column_width()\n",
+    "    .write(\"line 1\\nline 2\\nline 3\", title=\"Text\")\n",
     ")"
    ]
   },
