--- a/plot/plotting/content_scatter.ipynb
+++ b/plot/plotting/content_scatter.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "306898d6",
    "metadata": {},
    "outputs": [
@@ -59,17 +59,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "f3a46884",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x17c3198cec0>"
+       "<matplotlib.collections.PathCollection at 0x241210afcb0>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
